csrf checks made problems fixed validations added

--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -18,6 +18,7 @@
 <p>Elokuvan pääroolit:<br>
 <textarea name="leading_roles" rows="2" cols="50"></textarea>
 <p>
+<input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
 <input type="submit" value="Julkaise">
 </form>
 
