--- a/templates/categories_page.html
+++ b/templates/categories_page.html
@@ -11,6 +11,7 @@
 Nimi:
 <textarea name="category_name" rows="1" cols="30"></textarea>
 <p>
+<input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
 <input type="submit" value="Lisää katogorioihin">
 </form>
 <hr>
