--- a/templates/main.html
+++ b/templates/main.html
@@ -39,6 +39,7 @@ julkaistu: {{ movie[2] }}
 <form action="/delete_movie" method="POST">
 <p>
 <input type="hidden" name="movie_id" value={{movie[0]}}>
+<input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
 <input type="submit" value="Poista">
 </form>
 {% endif %}
