--- a/templates/movie_page.html
+++ b/templates/movie_page.html
@@ -25,7 +25,7 @@
 <p>Keskimääräinen arvosana: {{ average }}<br>
 <hr>
 <h3>Luo arvostelu:</h3>
-<form action="/new_review" method="POST">
+<form action="/movie_page/{{id}}" method="POST">
 {% endfor %}
 <p>Arvosana:<br>
 <input type="radio" name="grade" value="0"> 0
@@ -39,9 +39,12 @@
 <input type="radio" name="grade" value="8"> 8
 <input type="radio" name="grade" value="9"> 9
 <input type="radio" name="grade" value="10"> 10
-<p>Arvio:<br>
+<input type="radio" name="grade" value="-1" style="display:none" checked>
+<p>
+Arvio:<br>
 <textarea name="review" rows="3" cols="50"></textarea>
 <input type="hidden" name="movie_id" value={{ id }}>
+<input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
 <p>
 <input type="submit" value="Julkaise">
 </form>
@@ -53,11 +56,21 @@ Arvio:
 {{ review[1] }}
 <p>
 {{ review[3] }}
+<p>
 {% if session.user_role == True %}
 <form action="/delete_review" method="POST">
-<input type="hidden" name="review_id" value={{ review[4] }}>
-<input type="hidden" name="movie_id" value={{ id }}>
+<input type="hidden" name="review_id" value={{review[4]}}>
+<input type="hidden" name="movie_id" value={{id}}>
+<input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
 <input type="submit" value="Poista">
+</form>
+{% endif %}
+{% if review[4] == session.user_id %}
+<form action="/delete_review" method="POST">
+<input type="hidden" name= "review_id" value={{review[4]}}>
+<input type="hidden" name= "movie_id" value={{id}}>
+<input type= "submit" value="Poista">
+</form>
 {% endif %}
 <hr>
 {% endfor %}
