--- a/templates/suggest_movies.html
+++ b/templates/suggest_movies.html
@@ -18,5 +18,6 @@
 <p>Elokuvan pääroolit:<br>
 <textarea name="leading_roles" rows="2" cols="50"></textarea>
 <p>
+<input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
 <input type="submit" value="Ehdota">
 </form>
